<resources>
    <string name="app_name">GeoHandbook</string>
    <string name="title_cities">Cities</string>
    <string name="title_news">News</string>
    <string name="title_settings">Settings</string>
    <string name="title_attractions">Attractions</string>
    <string name="title_info">Info</string>
    <string name="title_map">Map</string>
    <string name="city_image">City image</string>
    <string name="population">Population</string>
    <string name="area">Area</string>
    <string name="description">Description</string>
    <string name="show_on_map">Show on map</string>
    <string name="show_weather">Show weather</string>
    <string name="no_favourite_attractions">No favourite attractions</string>
    <string name="application_language">Application language</string>
    <string name="english">English</string>
    <string name="serbian">Serbian</string>
    <string name="cache_size">Cache size [MB]</string>
    <string name="number_of_city_images">Number of city images</string>
    <string name="all">All</string>
    <string name="favourites">Favourites</string>
    <string name="discard">Discard</string>
    <string name="apply">Apply</string>
    <string name="flag">Flag</string>
    <string name="coat_of_arms">Coat of arms</string>
    <string name="capital">Capital</string>
    <string name="basic_info">Basic info</string>
    <string name="entities">Entities</string>
    <string name="republic_of_srpska_flag">Serb Republic flag</string>
    <string name="republic_of_srpska_coat_of_arms">Serb Republic coat of arms</string>
    <string name="history">History</string>
    <string name="video_unavailable">Video unavailable</string>
</resources>