<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cities">

    <fragment
        android:id="@+id/navigation_cities"
        android:name="com.rbhp.geohandbook.ui.cities.CitiesFragment"
        android:label="@string/title_cities"
        tools:layout="@layout/fragment_cities" />

    <fragment
        android:id="@+id/navigation_attractions"
        android:name="com.rbhp.geohandbook.ui.attractions.AttractionsFragment"
        android:label="@string/title_attractions"
        tools:layout="@layout/fragment_attractions"/>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.rbhp.geohandbook.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.rbhp.geohandbook.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.rbhp.geohandbook.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>