<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.rbhp.geohandbook.ui.settings.SettingsViewModel" />

        <import type="com.rbhp.geohandbook.data.Converter" />

        <variable
            name="viewmodel"
            type="SettingsViewModel" />

        <variable
            name="converter"
            type="Converter" />

    </data>

    <RelativeLayout
        android:id="@+id/fragment_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/application_language" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@={viewmodel.checkedLanguage}"
                        android:layout_margin="20dp">

                        <RadioButton
                            android:id="@+id/en"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/english" />

                        <RadioButton
                            android:id="@+id/sr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/serbian" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cache_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.slider.Slider
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:stepSize="1"
                            android:valueFrom="1"
                            android:valueTo="200"
                            android:value="@={Converter.integerToFloat(viewmodel.cacheSize)}"/>

                        <EditText
                            android:id="@+id/cache_size_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.15"
                            android:background="@null"
                            android:inputType="number"
                            android:text="@={Converter.integerToString(viewmodel.cacheSize)}" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Headline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_city_images" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.slider.Slider
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:stepSize="1"
                            android:valueFrom="1"
                            android:valueTo="10"
                            android:value="@={Converter.integerToFloat(viewmodel.numberOfImages)}"/>

                        <EditText
                            android:id="@+id/number_of_images_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.15"
                            android:background="@null"
                            android:inputType="number"
                            android:text="@={Converter.integerToString(viewmodel.numberOfImages)}"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>