<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="com.rbhp.geohandbook.data.Converter" />

        <import type="com.rbhp.geohandbook.data.CityData" />

        <import type="com.rbhp.geohandbook.ui.cities.CityListener" />

        <import type="com.rbhp.geohandbook.ui.cities.CitiesViewModel" />

        <variable
            name="city"
            type="CityData" />

        <variable
            name="listener"
            type="CityListener" />

        <variable
            name="viewModel"
            type="CitiesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardCornerRadius="@dimen/city_card_corner_radius"
            app:cardElevation="@dimen/city_card_elevation"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/city_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/city_image"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{city}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/title_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@{city.name}"
                            android:textSize="@dimen/city_name_text_size" />

                        <Button
                            android:id="@+id/show_on_map_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_cities"
                            android:onClick="@{() -> listener.onCityClick(city)}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="10sp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20sp"
                            android:layout_weight="0.5"
                            android:text="@string/population" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@{Converter.toString(city.population)}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="10sp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20sp"
                            android:layout_weight="0.5"
                            android:text="@string/area" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@{Converter.toString(city.size)}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="10sp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20sp"
                            android:text="Description"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:justificationMode="inter_word"
                            android:text="@{city.description}"/>

                    </LinearLayout>

                    <VideoView
                        android:id="@+id/city_video_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </ScrollView>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>